--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
+    "@lottiefiles/dotlottie-react": "^0.13.0",
     "@tanstack/react-query": "^5.66.9",
     "ant-design": "^1.0.0",
     "antd": "^5.24.2",
