--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "@lottiefiles/dotlottie-react": "^0.13.0",
     "@next/env": "^15.2.1",
+    "@tailwindcss/postcss": "^4.0.15",
     "@tanstack/react-query": "^5.66.9",
     "ant-design": "^1.0.0",
     "antd": "^5.24.2",
